Fixed test zone z-index

--- a/app/stylesheets/ide.sass
+++ b/app/stylesheets/ide.sass
@@ -218,6 +218,7 @@ ul.filetree
   margin-top: 1em
   padding: 0.5em
   position: absolute
+  z-index: 1000
 
   h3
     cursor: move
